--- a/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
+++ b/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,22 @@
 		<servlet-name>Dselect</servlet-name>
 		<url-pattern>/select</url-pattern>
 </servlet-mapping>
-
+<servlet>
+      <servlet-name>userlogout</servlet-name>
+      <servlet-class>com.lxisoft.servlets.LogoutServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+		<servlet-name>userlogout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+</servlet-mapping>
+<servlet>
+      <servlet-name>admin1</servlet-name>
+      <servlet-class>com.lxisoft.servlets.AdminServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+		<servlet-name>admin1</servlet-name>
+		<url-pattern>/admin</url-pattern>
+</servlet-mapping>
 <security-constraint>
       <web-resource-collection>
          <web-resource-name>login</web-resource-name>
@@ -46,12 +61,13 @@
             Let only admin use this app
          </description>
          <role-name>admin</role-name>
+         <role-name>guest</role-name>
 
       </auth-constraint>
 </security-constraint>
   <security-role>
       <role-name>admin</role-name>
-       
+      <role-name>guest</role-name> 
    </security-role>
    <login-config>
       <auth-method>FORM</auth-method>
