--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -81,6 +81,24 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <update>true</update>
+                <path>/ContactApp</path>
+                <server>TomcatServer</server>
+                <username>admin</username> 
+                <password>password</password> 
+            </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
