--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -22,6 +22,8 @@
 		<spring.version>3.2.8.RELEASE</spring.version>
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 		<jstl.version>1.2</jstl.version>
+		
+		<hibernate.version>3.6.0.Final</hibernate.version>
 	</properties>
 
   <dependencies>
@@ -31,7 +33,48 @@
       <version>3.8.1</version>  
       <scope>test</scope>  
     </dependency>  
-      
+     <!-- Spring AOP dependency -->
+        <dependency>
+    	        <groupId>cglib</groupId>
+		<artifactId>cglib</artifactId>
+		<version>2.2</version>
+	</dependency>
+	
+	<!-- Hibernate framework -->
+	<dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.1.6.Final</version>
+    </dependency>
+    
+	
+	
+	<!-- Hibernate library dependecy start -->
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>commons-logging</groupId>
+		<artifactId>commons-logging</artifactId>
+		<version>1.1.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>commons-collections</groupId>
+		<artifactId>commons-collections</artifactId>
+		<version>3.2.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>antlr</groupId>
+		<artifactId>antlr</artifactId>
+		<version>2.7.7</version>
+	</dependency>
+	<!-- Hibernate library dependecy end -->
+	 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->  
 <dependency>  
     <groupId>org.springframework</groupId>  
