--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -24,6 +24,7 @@
 		<jstl.version>1.2</jstl.version>
 		
 		<hibernate.version>3.6.0.Final</hibernate.version>
+		
 	</properties>
 
   <dependencies>
@@ -40,12 +41,12 @@
 		<version>2.2</version>
 	</dependency>
 	
-	<!-- Hibernate framework -->
-	<dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>4.1.6.Final</version>
-    </dependency>
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.7.Final</version>
+        </dependency>
     
 	
 	
@@ -73,6 +74,13 @@
 		<artifactId>antlr</artifactId>
 		<version>2.7.7</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>5.4.3.Final</version>
+</dependency>
+	
 	<!-- Hibernate library dependecy end -->
 	 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->  
