--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -5,6 +5,8 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Servlet</servlet-name>
-    <url-pattern>/Question</url-pattern>
+    <url-pattern>/QuestionServlet</url-pattern>
   </servlet-mapping>
   </web-app>
+  <web-app>  
+  
