--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -17,14 +17,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
- 
-		<jdk.version>1.6</jdk.version>
-		<spring.version>3.2.8.RELEASE</spring.version>
-		<spring.security.version>3.2.3.RELEASE</spring.security.version>
-		<jstl.version>1.2</jstl.version>
-		
-		<hibernate.version>3.6.0.Final</hibernate.version>
-		
 	</properties>
 
   <dependencies>
@@ -33,63 +25,47 @@
       <artifactId>junit</artifactId>  
       <version>3.8.1</version>  
       <scope>test</scope>  
-    </dependency>  
-     <!-- Spring AOP dependency -->
-        <dependency>
-    	        <groupId>cglib</groupId>
-		<artifactId>cglib</artifactId>
-		<version>2.2</version>
-	</dependency>
-	
+    </dependency> 
+     
+     <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.2.2.RELEASE</version>
+</dependency>
+
+     <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.4.10.Final</version>
+        </dependency>
+    
 	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.3.7.Final</version>
+            <version>5.4.10.Final</version>
         </dependency>
-    
-	
-	
-	<!-- Hibernate library dependecy start -->
-	<dependency>
-		<groupId>dom4j</groupId>
-		<artifactId>dom4j</artifactId>
-		<version>1.6.1</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>commons-logging</groupId>
-		<artifactId>commons-logging</artifactId>
-		<version>1.1.1</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>commons-collections</groupId>
-		<artifactId>commons-collections</artifactId>
-		<version>3.2.1</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>antlr</groupId>
-		<artifactId>antlr</artifactId>
-		<version>2.7.7</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
-<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-entitymanager</artifactId>
-    <version>5.4.3.Final</version>
-</dependency>
-	
-	<!-- Hibernate library dependecy end -->
 	 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->  
 <dependency>  
     <groupId>org.springframework</groupId>  
     <artifactId>spring-webmvc</artifactId>  
-    <version>5.1.1.RELEASE</version>  
+    <version>5.2.2.RELEASE</version>  
+</dependency> 
+
+<dependency>  
+    <groupId>org.springframework</groupId>  
+    <artifactId>spring-orm</artifactId>  
+    <version>5.2.2.RELEASE</version>  
 </dependency>  
   
+   <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
+        
 <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->  
 <dependency>    
     <groupId>javax.servlet</groupId>    
@@ -106,32 +82,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
+			<version>5.2.2.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${spring.security.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>${spring.security.version}</version>
+			<artifactId>spring-tx</artifactId>
+			<version>5.2.2.RELEASE</version>
 		</dependency>
   </dependencies>
 
