--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -31,6 +31,16 @@
     <url-pattern>/Result</url-pattern>
   </servlet-mapping>
 
+ <servlet>
+    <servlet-name>AddServlet</servlet-name>
+    <servlet-class>com.lxisoft.Controler.AddServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AddServlet</servlet-name>
+    <url-pattern>/Add</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>TestServlet</servlet-name>
     <jsp-file>/index.jsp</jsp-file>
