--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -24,12 +24,12 @@
   
 <servlet>  
 <servlet-name>addservlet</servlet-name>  
-<servlet-class>com.lxisoft.Control.AddQuestionServlet</servlet-class>  
+<servlet-class>com.lxisoft.Control.AddServlet</servlet-class>  
 </servlet>  
   
 <servlet-mapping>  
 <servlet-name>addservlet</servlet-name>  
-<url-pattern>/AddQuestionServlet</url-pattern>  
+<url-pattern>/AddServlet</url-pattern>  
 </servlet-mapping>
 
 <servlet>  
@@ -40,6 +40,17 @@
 <servlet-mapping>  
 <servlet-name>updateservlet</servlet-name>  
 <url-pattern>/UpdateServlet</url-pattern>  
+</servlet-mapping>
+
+
+<servlet>  
+<servlet-name>viewservlet</servlet-name>  
+<servlet-class>com.lxisoft.Control.ViewServlet</servlet-class>  
+</servlet>  
+  
+<servlet-mapping>  
+<servlet-name>viewservlet</servlet-name>  
+<url-pattern>/ViewServlet</url-pattern>  
 </servlet-mapping>
  
  
