--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,13 @@
 
   <security-constraint>
 		<web-resource-collection>
-			<web-resource-name>secured</web-resource-name>
+			<web-resource-name>MockExam</web-resource-name>
 			<url-pattern>/protected/*</url-pattern>
+			<http-method>POST</http-method>-+
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
+			<role-name>user</role-name>
 		</auth-constraint>
 	</security-constraint>
 	<security-role>
