--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -8,17 +8,24 @@
   <security-constraint>
 		<web-resource-collection>
 			<web-resource-name>MockExam</web-resource-name>
-			<url-pattern>/protected/*</url-pattern>
-			<http-method>POST</http-method>-+
+			<url-pattern>/admin.jsp</url-pattern>
+			<http-method>POST</http-method>
+			<http-method>GET</http-method>
 		</web-resource-collection>
+
+
 		<auth-constraint>
 			<role-name>admin</role-name>
 			<role-name>user</role-name>
 		</auth-constraint>
-	</security-constraint>
+  </security-constraint>
+
+
 	<security-role>
 		<role-name>admin</role-name>
+		<role-name>user</role-name>
 	</security-role>
+
 	<login-config>
 		<auth-method>FORM</auth-method>
 		<form-login-config>
