--- a/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
@@ -81,7 +81,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Result</servlet-name>
-		<url-pattern>/secured/viewResult</url-pattern>
+		<url-pattern>/viewResult</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
