--- a/MockExam/New folder/MockExam/WEB-INF/web.xml
+++ b/MockExam/New folder/MockExam/WEB-INF/web.xml
@@ -27,5 +27,24 @@
 		<url-pattern>/questionEdit</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>com.lxisoft.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/userLogin</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>User</servlet-name>
+		<servlet-class>com.lxisoft.servlet.AdduserServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>User</servlet-name>
+		<url-pattern>/userAdding</url-pattern>
+	</servlet-mapping>
+
+
 
 </web-app>		
