--- a/MockExam/maven/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/maven/src/main/webapp/WEB-INF/web.xml
@@ -62,26 +62,42 @@
     <servlet-name>SetExam</servlet-name>
     <url-pattern>/SetExam</url-pattern>
   </servlet-mapping>
-      <security-role>
-      <role-name>admin</role-name>
-    </security-role>
-
-    <security-role>
+  
+  
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.lxisoft.controller.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+   <security-role>
       <role-name>user</role-name>
     </security-role>
-
-    <security-constraint>
-      <web-resource-collection>
-         <web-resource-name>MockExam</web-resource-name>
-         <url-pattern>/usersignup</url-pattern>
-            <http-method>GET</http-method>
+   <security-role>
+      <role-name>admin</role-name>
+    </security-role>
+  
+  
+  <security-constraint>
+	  <web-resource-collection>
+		  <web-resource-name>MockExam</web-resource-name>
+		  <url-pattern>/login</url-pattern>
+		   <http-method>GET</http-method>
             <http-method>POST</http-method>
-      </web-resource-collection>
-      
-      <auth-constraint>
-         <role-name>admin</role-name>
-         <role-name>user</role-name>
-      </auth-constraint>
-
-      </security-constraint>
+		  
+	  </web-resource-collection>
+	  <auth-constraint>
+			<role-name>admin</role-name>
+			<role-name>user</role-name>
+		</auth-constraint>
+  </security-constraint>
+   <login-config>
+      <auth-method>FORM</auth-method>
+        <form-login-config>
+           <form-login-page>/login.jsp</form-login-page>
+           <form-error-page>/loginfailed.html</form-error-page>
+        </form-login-config>
+      </login-config>
 </web-app>
