--- a/MockExam/maven/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/maven/src/main/webapp/WEB-INF/web.xml
@@ -72,6 +72,17 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>Register</servlet-name>
+    <servlet-class>com.lxisoft.controller.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
+  
+  
    <security-role>
       <role-name>user</role-name>
     </security-role>
@@ -95,6 +106,7 @@
   </security-constraint>
    <login-config>
       <auth-method>FORM</auth-method>
+      <realm-name>JDBCRealm</realm-name>
         <form-login-config>
            <form-login-page>/login.jsp</form-login-page>
            <form-error-page>/loginfailed.html</form-error-page>
