--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -1,38 +1,38 @@
 <web-app>
 <servlet>
-<servlet-name>LoginCheck</servlet-name>
-<servlet-class>com.lxisoft.servlet.LoginCheck</servlet-class>
+<servlet-name>LoginServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.LoginServlet</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>LoginCheck</servlet-name>
-<url-pattern>/LoginCheck</url-pattern>
+<servlet-name>LoginServlet</servlet-name>
+<url-pattern>/LoginServlet</url-pattern>
 </servlet-mapping>
 
 <servlet>
-<servlet-name>AddContact</servlet-name>
-<servlet-class>com.lxisoft.servlet.AddContact</servlet-class>
+<servlet-name>AddServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.AddServlet</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>AddContact</servlet-name>
-<url-pattern>/AddContact</url-pattern>
+<servlet-name>AddServlet</servlet-name>
+<url-pattern>/AddServlet</url-pattern>
 </servlet-mapping>
 
 <servlet>
-<servlet-name>DeleteContact</servlet-name>
-<servlet-class>com.lxisoft.servlet.DeleteContact</servlet-class>
+<servlet-name>DeleteServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.DeleteServlet</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>DeleteContact</servlet-name>
-<url-pattern>/DeleteContact</url-pattern>
+<servlet-name>DeleteServlet</servlet-name>
+<url-pattern>/DeleteServlet</url-pattern>
 </servlet-mapping> 
 
 <servlet>
-<servlet-name>UpdateContact</servlet-name>
-<servlet-class>com.lxisoft.servlet.UpdateContact</servlet-class>
+<servlet-name>UpdateServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.UpdateServlet</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>UpdateContact</servlet-name>
-<url-pattern>/UpdateContact</url-pattern>
+<servlet-name>UpdateServlet</servlet-name>
+<url-pattern>/UpdateServlet</url-pattern>
 </servlet-mapping> 
 
 
