--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -44,4 +44,41 @@
 <url-pattern>/ViewServlet</url-pattern>
 </servlet-mapping>
 
+<servlet>
+<servlet-name>ViewServletUser</servlet-name>
+<servlet-class>com.lxisoft.servlet.ViewServletUser</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>ViewServletUser</servlet-name>
+<url-pattern>/ViewServletUser</url-pattern>
+</servlet-mapping>
+
+<security-constraint>
+	<web-resource-collection>
+	<web-resource-name>secured</web-resource-name>
+	<url-pattern>/AdminMenu.jsp</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+      </web-resource-collection>
+      
+      <auth-constraint>
+         <description></description>
+         <role-name>admin</role-name>
+      </auth-constraint>
+   </security-constraint>
+   
+   <security-role>
+      <role-name>admin</role-name>
+   </security-role>
+   
+   <login-config>
+      <auth-method>FORM</auth-method>
+      <form-login-config>
+         <form-login-page>/loginmanager.jsp</form-login-page>
+         <form-error-page>/error.jsp</form-error-page>
+      </form-login-config>
+   </login-config>
+
+
+
 </web-app>
