--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
 <security-constraint>
 	<web-resource-collection>
 	<web-resource-name>secured</web-resource-name>
-	<url-pattern>/AdminMenu.jsp</url-pattern>
+	<url-pattern>/Menu.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
       </web-resource-collection>
@@ -64,17 +64,25 @@
       <auth-constraint>
          <description></description>
          <role-name>admin</role-name>
+                  <role-name>user</role-name>
+
+
+
       </auth-constraint>
    </security-constraint>
    
    <security-role>
       <role-name>admin</role-name>
+               <role-name>user</role-name>
+
+
+
    </security-role>
    
    <login-config>
       <auth-method>FORM</auth-method>
       <form-login-config>
-         <form-login-page>/loginmanager.jsp</form-login-page>
+         <form-login-page>/Index.jsp</form-login-page>
          <form-error-page>/error.jsp</form-error-page>
       </form-login-config>
    </login-config>
