--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
 <security-constraint>
 	<web-resource-collection>
 	<web-resource-name>secured</web-resource-name>
-	<url-pattern>/Menu.jsp</url-pattern>
+	<url-pattern>/index.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
       </web-resource-collection>
@@ -82,7 +82,7 @@
    <login-config>
       <auth-method>FORM</auth-method>
       <form-login-config>
-         <form-login-page>/Index.jsp</form-login-page>
+         <form-login-page>/login.jsp</form-login-page>
          <form-error-page>/error.jsp</form-error-page>
       </form-login-config>
    </login-config>
