--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -58,4 +58,14 @@
 <url-pattern>/SearchContactServlet</url-pattern>
 </servlet-mapping>
 
+<servlet>
+<servlet-name>LoginServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.LoginServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>LoginServlet</servlet-name>
+<url-pattern>/LoginServlet</url-pattern>
+</servlet-mapping>
+
+
 </web-app>
