--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -58,14 +58,46 @@
 <url-pattern>/SearchContactServlet</url-pattern>
 </servlet-mapping>
 
-<servlet>
-<servlet-name>LoginServlet</servlet-name>
-<servlet-class>com.lxisoft.servlet.LoginServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>LoginServlet</servlet-name>
-<url-pattern>/LoginServlet</url-pattern>
-</servlet-mapping>
+<security-constraint>
+	<web-resource-collection>
+		<web-resource-name>SecureUserConnection</web-resource-name>
+		<url-pattern>/userIndex.jsp</url-pattern>
+		<http-method>GET</http-method>
+		<http-method>POST</http-method>
+	</web-resource-collection>
 
+	<web-resource-collection>
+		<web-resource-name>SecureAdminConnection</web-resource-name>
+		<url-pattern>/adminIndex.jsp</url-pattern>
+		<http-method>GET</http-method>
+		<http-method>POST</http-method>
+	</web-resource-collection>
+
+	<auth-constraint>
+		<description>This is for admin</description>
+		<role-name>admin</role-name>
+	</auth-constraint>
+	<auth-constraint>
+		<description>This is For User</description>
+		<role-name>user</role-name>
+	</auth-constraint>
+</security-constraint>
+
+
+<login-cofig>
+	<auth-method>FORM</auth-method>
+	<realm-name>file</realm-name>
+		<form-login-config>
+			<form-login-page>/Login.jsp</form-login-page>
+			<form-error-page>/Errorlogin.jsp</form-error-page>
+		</form-login-config>
+	</login-cofig>
+
+	<security-role>
+    <role-name>admin</role-name>
+</security-role>
+<security-role>
+    <role-name>user</role-name>
+</security-role>
 
 </web-app>
