--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -59,16 +59,16 @@
 </servlet-mapping>
 
 <security-constraint>
-	<web-resource-collection>
-		<web-resource-name>SecureUserConnection</web-resource-name>
-		<url-pattern>/userIndex.jsp</url-pattern>
-		<http-method>GET</http-method>
-		<http-method>POST</http-method>
-	</web-resource-collection>
+	<!-- <web-resource-collection> -->
+		<!-- <web-resource-name>SecureUserConnection</web-resource-name> -->
+		<!-- <url-pattern>/userIndex.jsp</url-pattern> -->
+		<!-- <http-method>GET</http-method> -->
+		<!-- <http-method>POST</http-method> -->
+	<!-- </web-resource-collection> -->
 
 	<web-resource-collection>
-		<web-resource-name>SecureAdminConnection</web-resource-name>
-		<url-pattern>/adminIndex.jsp</url-pattern>
+		<web-resource-name>SecureConnection</web-resource-name>
+		<url-pattern>/Index.jsp</url-pattern>
 		<http-method>GET</http-method>
 		<http-method>POST</http-method>
 	</web-resource-collection>
@@ -85,19 +85,14 @@
 
 
 <login-cofig>
-	<auth-method>FORM</auth-method>
-	<realm-name>file</realm-name>
-		<form-login-config>
-			<form-login-page>/Login.jsp</form-login-page>
-			<form-error-page>/Errorlogin.jsp</form-error-page>
-		</form-login-config>
+	<auth-method>Basic</auth-method>
+	<!-- <realm-name>file</realm-name> -->
+		<!-- <form-login-config> -->
+			<!-- <form-login-page>/Login.jsp</form-login-page> -->
+			<!-- <form-error-page>/Errorlogin.jsp</form-error-page> -->
+		<!-- </form-login-config> -->
 	</login-cofig>
 
-	<security-role>
-    <role-name>admin</role-name>
-</security-role>
-<security-role>
-    <role-name>user</role-name>
-</security-role>
+
 
 </web-app>
