--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -2,6 +2,15 @@
 
 	
 <servlet>
+<servlet-name>ViewDatabaseUserServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.ViewDatabaseUserServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>ViewDatabaseUserServlet</servlet-name>
+<url-pattern>/ViewDatabaseUserServlet</url-pattern>
+</servlet-mapping>
+
+<servlet>
 <servlet-name>ViewDatabaseServlet</servlet-name>
 <servlet-class>com.lxisoft.servlet.ViewDatabaseServlet</servlet-class>
 </servlet>
@@ -58,40 +67,36 @@
 <url-pattern>/SearchContactServlet</url-pattern>
 </servlet-mapping>
 
+
+
 <security-constraint>
-	<!-- <web-resource-collection> -->
-		<!-- <web-resource-name>SecureUserConnection</web-resource-name> -->
-		<!-- <url-pattern>/userIndex.jsp</url-pattern> -->
-		<!-- <http-method>GET</http-method> -->
-		<!-- <http-method>POST</http-method> -->
-	<!-- </web-resource-collection> -->
-
-	<web-resource-collection>
-		<web-resource-name>SecureConnection</web-resource-name>
-		<url-pattern>/Index.jsp</url-pattern>
-		<http-method>GET</http-method>
-		<http-method>POST</http-method>
-	</web-resource-collection>
-
-	<auth-constraint>
-		<description>This is for admin</description>
-		<role-name>admin</role-name>
-	</auth-constraint>
-	<auth-constraint>
-		<description>This is For User</description>
-		<role-name>user</role-name>
-	</auth-constraint>
-</security-constraint>
-
-
-<login-cofig>
-	<auth-method>Basic</auth-method>
-	<!-- <realm-name>file</realm-name> -->
-		<!-- <form-login-config> -->
-			<!-- <form-login-page>/Login.jsp</form-login-page> -->
-			<!-- <form-error-page>/Errorlogin.jsp</form-error-page> -->
-		<!-- </form-login-config> -->
-	</login-cofig>
+      <web-resource-collection>
+         <web-resource-name>SecuredBookSite</web-resource-name>
+         <url-pattern>/userIndex.jsp</url-pattern>
+         <url-pattern>/adminIndex.jsp</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+      </web-resource-collection>
+      
+      <auth-constraint>
+         <description>Let only managers use this app</description>
+         <role-name>admin</role-name>
+         <role-name>user</role-name>
+      </auth-constraint>
+   </security-constraint>
+   
+   <security-role>
+      <role-name>admin</role-name>
+      <role-name>user</role-name>
+   </security-role>
+   
+   <login-config>
+      <auth-method>FORM</auth-method>
+      <form-login-config>
+         <form-login-page>/Login.jsp</form-login-page>
+         <form-error-page>/Errorlogin.jsp</form-error-page>
+      </form-login-config>
+   </login-config>
 
 
 
