--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -72,7 +72,7 @@
 <security-constraint>
       <web-resource-collection>
          <web-resource-name>SecuredBookSite</web-resource-name>
-         <url-pattern>/userIndex.jsp</url-pattern>
+         <!-- <url-pattern>/userIndex.jsp</url-pattern> -->
          <url-pattern>/adminIndex.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
