--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -37,9 +37,25 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
+<!-- <dependency> -->
+    <!-- <groupId>org.apache.maven.plugins</groupId> -->
+    <!-- <artifactId>maven-war-plugin</artifactId> -->
+    <!-- <version>3.3.1</version> -->
+<!-- </dependency> -->
+
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<!-- <dependency> -->
+    <!-- <groupId>org.apache.maven.plugins</groupId> -->
+    <!-- <artifactId>maven-compiler-plugin</artifactId> -->
+    <!-- <version>3.8.1</version> -->
+<!-- </dependency> -->
 
 </dependencies>
-<plugins>
+
+  <build>
+    <finalName>contactApp</finalName>
+    <plugins>
 
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -59,7 +75,6 @@
 
   </plugins>
 
-  <build>
-    <finalName>contactApp</finalName>
+
   </build>
 </project>
